kubernetes/apigateway.deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apigateway-deployment
  annotations:
    configmap.reloader.stakater.com/reload: "apigateway-configmap"
spec:
  selector:
    matchLabels:
      app: nginx
  replicas: 1
  template:
    metadata:
      labels:
        app: nginx
    spec:
      volumes:
        - name: apigateway-configmap
          configMap:
            name: apigateway-configmap
            items:
              - key: nginx.conf
                path: default.conf
      containers:
        - name: nginx
          image: nginx:latest
          ports:
            - containerPort: 80
            - containerPort: 443
          volumeMounts:
            - name: apigateway-configmap
              mountPath: /etc/nginx/conf.d/default.conf
              subPath: default.conf
