kubernetes/es.deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: es-deployment
spec:
  selector:
    matchLabels:
      app: es
  replicas: 1
  template:
    metadata:
      labels:
        app: es
    spec:
      nodeSelector:
        node_name: data_01
      volumes:
        - name: elasticsearch-pvc
          persistentVolumeClaim:
            claimName: elasticsearch-pvc
      containers:
        - name: es
          image: docker.elastic.co/elasticsearch/elasticsearch:7.9.2
          ports:
            - containerPort: 9200
              name: es-port
          volumeMounts:
            - name: elasticsearch-pvc
              mountPath: /usr/share/elasticsearch/data
