kubernetes/keycloak.deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak-deployment
spec:
  selector:
    matchLabels:
      app: keycloak
  replicas: 1
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      volumes:
        - name: keycloak-pvc
          persistentVolumeClaim:
            claimName: keycloak-pvc
      containers:
        - name: keycloak
          image: jboss/keycloak:11.0.2
          ports:
            - containerPort: 8080
              name: keycloak-port
          volumeMounts:
            - name: keycloak-pvc
              mountPath: /opt/jboss/keycloak/standalone/data
