kubernetes/minio.deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: minio-deployment
spec:
  selector:
    matchLabels:
      app: minio
  replicas: 1
  template:
    metadata:
      labels:
        app: minio
    spec:
      volumes:
        - name: minio-pvc
          persistentVolumeClaim:
            claimName: minio-pvc
      containers:
        - name: minio
          image: minio/minio
          ports:
            - containerPort: 9000
              name: minio-port
          command:
            - "/bin/sh"
            - "-ce"
            - "/usr/bin/docker-entrypoint.sh minio server /data"
          volumeMounts:
            - name: minio-pvc
              mountPath: /data
