kubernetes/vinlab-api.deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vinlab-api-deployment
spec:
  selector:
    matchLabels:
      app: vinlab-api
  replicas: 1
  template:
    metadata:
      labels:
        app: vinlab-api
    spec:
      nodeSelector:
        node_name: data_01
      volumes:
        - name: backend-configmap
          configMap:
            name: backend-configmap
            items:
              - key: config.production.toml
                path: config.production.toml
              - key: permissions.csv
                path: permissions.csv
      containers:
        - name: vindr-lab-api
          image: vindr/vinlab-api
          ports:
            - containerPort: 8080
              name: backend-01
          volumeMounts:
            - name: backend-configmap
              mountPath: /opt/app/conf/config.production.toml
              subPath: config.production.toml
            - name: backend-configmap
              mountPath: /opt/app/conf/permissions.csv
              subPath: permissions.csv
          imagePullPolicy: Always
      imagePullSecrets:
        - name: vindr-ecr
