kubernetes/vinlab-dashboard.deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vinlab-dashboard-deployment
spec:
  selector:
    matchLabels:
      app: dashboard
  replicas: 1
  template:
    metadata:
      labels:
        app: dashboard
    spec:
      containers:
        - name: vinlab-dashboard
          image: vindr/vinlab-dashboard
          ports:
            - containerPort: 80
              name: dashboard-port
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 30
            periodSeconds: 3
          imagePullPolicy: Always
      imagePullSecrets:
        - name: vindr-ecr
