kubernetes/vinlab-uploader.deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vinlab-uploader-deployment
spec:
  selector:
    matchLabels:
      app: vinlab-uploader
  replicas: 1
  template:
    metadata:
      labels:
        app: vinlab-uploader
    spec:
      volumes:
        - name: backend-configmap
          configMap:
            name: backend-configmap
            items:
              - key: pubkey.txt
                path: pubkey.txt
      containers:
        - name: vindr-lab-upload
          image: vindr/vinlab-dicom-uploader
          ports:
            - containerPort: 8080
              name: backend-02
          volumeMounts:
            - name: backend-configmap
              mountPath: /app/key.pub
              subPath: pubkey.txt
          imagePullPolicy: Always
      imagePullSecrets:
        - name: vindr-ecr
