kubernetes/vinlab-viewer.deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vinlab-viewer-deployment
spec:
  selector:
    matchLabels:
      app: viewer
  replicas: 1
  template:
    metadata:
      labels:
        app: viewer
    spec:
      containers:
        - name: vinlab-viewer
          image: vindr/vinlab-viewer
          ports:
            - containerPort: 80
              name: viewer-port
          readinessProbe:
            httpGet:
              path: /medical-view
              port: 80
            initialDelaySeconds: 30
            periodSeconds: 3
      imagePullSecrets:
        - name: vindr-ecr
