kubernetes/es.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: es
spec:
  selector:
    app: es
  ports:
    - port: 9200
      targetPort: 9200
