kubernetes/id-generator.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: id-generator
spec:
  selector:
    app: id-generator
  ports:
    - port: 8080
      targetPort: 8080
