kubernetes/lb.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vinlab-lb
spec:
  selector:
    app: nginx
  ports:
    - name: nginx-port
      port: 8080
      targetPort: 80
  type: LoadBalancer
