kubernetes/orthanc.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: orthanc
spec:
  selector:
    app: orthanc
  ports:
    - port: 8042
      targetPort: 8042
