kubernetes/orthanc.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orthanc-deployment
spec:
  selector:
    matchLabels:
      app: orthanc
  replicas: 1
  template:
    metadata:
      labels:
        app: orthanc
    spec:
      volumes:
        - name: orthanc-pvc
          persistentVolumeClaim:
            claimName: orthanc-pvc
      containers:
        - name: orthanc
          image: osimis/orthanc
          ports:
            - containerPort: 8042
              name: orthanc-port
            - containerPort: 4242
              name: dicomweb-port
          volumeMounts:
            - name: orthanc-pvc
              mountPath: /var/lib/orthanc/db
      imagePullSecrets:
        - name: vindr-ecr
---
apiVersion: v1
kind: Service
metadata:
  name: orthanc
spec:
  selector:
    app: orthanc
  ports:
    - port: 8042
      targetPort: 8042
