kubernetes/viewer.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: viewer
spec:
  selector:
    app: viewer
  ports:
    - port: 80
      targetPort: 80
