kubernetes/vinlab-api.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vinlab-api
spec:
  selector:
    app: vinlab-api
  ports:
    - port: 8080
      targetPort: 8080
