kubernetes/vinlab-uploader.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vinlab-uploader
spec:
  selector:
    app: vinlab-uploader
  ports:
    - port: 8080
      targetPort: 8080
