kubernetes/vinlab-uploader.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vinlab-uploader-deployment
spec:
  selector:
    matchLabels:
      app: vinlab-uploader
  replicas: 1
  template:
    metadata:
      labels:
        app: vinlab-uploader
    spec:
      containers:
        - name: vindr-lab-upload
          image: vindr/vinlab-dicom-uploader
          ports:
            - containerPort: 8080
              name: backend-02
          imagePullPolicy: Always
      imagePullSecrets:
        - name: vindr-ecr
---
apiVersion: v1
kind: Service
metadata:
  name: vinlab-uploader
spec:
  selector:
    app: vinlab-uploader
  ports:
    - port: 8080
      targetPort: 8080
