kubernetes/vinlab.ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vinlab-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: "localhost:8080"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx
                port:
                  number: 80
